--- a/package.json
+++ b/package.json
@@ -7,34 +7,44 @@
   ],
   "prettier": {},
   "scripts": {
-    "build": "parcel build src/index.html",
-    "start": "parcel src/index.html src/worker/index.js",
-    "dev": "parcel src/index.html src/worker/index.js",
-    "clean": "rm -rf .cache dist"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "clean": "rm -rf dist"
   },
   "dependencies": {
-    "@babel/core": "^7.0.0-0",
+    "@babel/core": "^7.28.5",
+    "@babel/standalone": "^7.28.5",
     "@vueuse/core": "^14.1.0",
-    "babel-plugin-macros": "^2.8.0",
+    "babel-plugin-macros": "^3.1.0",
     "babel-polyfill": "^6.26.0",
-    "common-tags": "^1.8.0",
-    "lz-string": "^1.4.4",
-    "prismjs": "^1.19.0",
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0",
-    "react-icons": "^3.8.0",
-    "react-inspector": "^4.0.0",
-    "react-range": "^1.4.9",
-    "react-simple-code-editor": "^0.11.0",
-    "react-use": "^13.20.0",
-    "styled-components": "^5.0.0",
+    "color": "^5.0.3",
+    "common-tags": "^1.8.2",
+    "lz-string": "^1.5.0",
+    "prismjs": "^1.30.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "react-error-boundary": "^6.0.1",
+    "react-icons": "^5.5.0",
+    "react-inspector": "^9.0.0",
+    "react-range": "^1.10.0",
+    "react-simple-code-editor": "^0.14.1",
+    "react-use": "^17.6.0",
     "vue": "^3.5.26"
   },
   "devDependencies": {
-    "@babel/plugin-transform-runtime": "^7.8.3",
-    "@babel/preset-react": "^7.8.3",
-    "parcel-bundler": "^1.12.4",
-    "sass": "^1.24.5",
-    "typescript": "^3.7.5"
+    "@babel/plugin-transform-runtime": "^7.28.5",
+    "@babel/preset-react": "^7.28.5",
+    "@parcel/transformer-babel": "^2.16.3",
+    "@parcel/transformer-sass": "2.16.3",
+    "@vitejs/plugin-react": "^5.1.2",
+    "buffer": "^5.5.0||^6.0.0",
+    "parcel": "^2.12.0",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
+    "sass": "^1.97.1",
+    "typescript": "^5.9.3",
+    "vite": "^7.3.0",
+    "vite-plugin-prismjs": "^0.0.11"
   }
 }
