--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-polyfill": "^6.26.0",
     "color": "^5.0.3",
     "common-tags": "^1.8.2",
+    "js-beautify": "^1.15.4",
     "lz-string": "^1.5.0",
     "prismjs": "^1.30.0",
     "react": "^19.2.3",
@@ -33,6 +34,7 @@
     "vue": "^3.5.26"
   },
   "devDependencies": {
+    "@babel/parser": "^7.28.5",
     "@babel/plugin-transform-runtime": "^7.28.5",
     "@babel/preset-react": "^7.28.5",
     "@parcel/transformer-babel": "^2.16.3",
