--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@babel/core": "^7.28.5",
     "@babel/standalone": "^7.28.5",
-    "@monaco-editor/react": "^4.7.0",
+    "@monaco-editor/react": "^4.8.0-rc.3",
     "@vueuse/core": "^14.1.0",
     "babel-plugin-macros": "^3.1.0",
     "babel-polyfill": "^6.26.0",
